--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,16 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://majiancheng.top
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
+
+# 自动生成sitemap
+sitemap:
+    path: sitemap.xml
+baidusitemap:
+    path: baidusitemap.xml
 
 # Directory
 source_dir: source
