add:增加百度分享 和界面适配

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -422,8 +422,12 @@ gitment:
 # Available value:
 #    button | slide
 # Warning: Baidu Share does not support https.
-#baidushare:
-##  type: button
+baidushare:
+    type: button
+    baidushare: true
+
+#sharesdk: false
+#shareSDKappkey: 257bea6f4b210
 
 # Share
 # This plugin is more useful in China, make sure you known how to use it.
